syntax = "proto2";
package jy;

import "enum.proto";

// packet ///////////////////////////////////////////////////////////////////////////
message NetConnect
{
	optional EMessageID			MessageID			= 99	[default = NET_CONNECT];

	optional string				ConnectIP			= 1		[default = ""];
	optional int32				ConnectPort			= 2		[default = 0];
	optional int32				TimeoutMS			= 3		[default = 0];
	optional int64				ServerTime			= 4		[default = 0];
}

message NetDisconnect
{
	optional EMessageID			MessageID			= 99	[default = NET_DISCONNECT];
}

message NetAliveReq
{
	optional EMessageID			MessageID			= 99	[default = NET_ALIVE_REQ];

	optional int64				RequestMS			= 1		[default = 0];
}

message NetAliveAck
{
	optional EMessageID			MessageID			= 99	[default = NET_ALIVE_ACK];

	optional int64				RequestMS			= 1		[default = 0];
	optional int64				ResponseMS			= 2		[default = 0];
}
